<resources>
    <string name="app_name">Notatki</string>
    <string name="note_hint">Wpisz notatkę...</string>
    <string name="location">Lokalizacja: brak</string>
    <string name="add_location">Dodaj lokalizację</string>
    <string name="take_photo">Zrób zdjęcie</string>
    <string name="start_recording">Nagraj dźwięk</string>
    <string name="stop_recording">Zakończ nagrywanie</string>
    <string name="save_note">Zapisz notatkę</string>
    <string name="city_found">Miasto: %1$s</string>
    <string name="photo_url">Brak zdjęcia</string>
    <string name="audio_url">Brak audio</string>
    <string name="local_label">lokalizacja</string>
    <string name="note_label">Notatka:</string>
    <string name="photo_label">Zdjęcie:</string>
    <string name="label_voice_note">Notatka głosowa:</string>
</resources>
